# simple-blog-from-scratch

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeListsYetAnotherWay.txt  CMakeOtherWayToBuild.txt  README.md  SETUP.md  blogs.db  build.sh  definentions.hpp  main.cpp
controllers/: api_controllers.hpp  controllers.hpp
middlewares/: middlewares.hpp
models/: models.hpp
routes/: routes.hpp
static/: admin-dashboard.css  admin-edit-blog.css  admin-login.css  index.css  single-blog.css
test/: README.md  package-lock.json  package.json  test_api.js
utils/: utils.hpp
views/: views.hpp
views/html/: admin-dashboard.html  admin-edit-blog.html  admin-login.html  index.html  single-blog.html
